[gd_scene load_steps=5 format=2]

[ext_resource path="res://script/main.gd" type="Script" id=1]
[ext_resource path="res://assets/grass.png" type="Texture" id=2]
[ext_resource path="res://scene/plane.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/ui.tscn" type="PackedScene" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -2
motion_offset = Vector2( -0.94, 0 )
motion_mirroring = Vector2( 0, 1280 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2( 1.15191, 1.15191 )
texture = ExtResource( 2 )

[node name="enemi_spawn" type="Timer" parent="."]

[node name="distance" type="Timer" parent="."]
autostart = true

[node name="camera_stop" type="Timer" parent="."]
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -220 )
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false

[node name="plane" parent="." instance=ExtResource( 3 )]

[node name="Control" parent="." instance=ExtResource( 4 )]
[connection signal="timeout" from="enemi_spawn" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="distance" to="." method="_on_distance_timeout"]
[connection signal="timeout" from="camera_stop" to="." method="_on_camera_stop_timeout"]
